add_subdirectory(${SRC_ROOT}/sys)
add_subdirectory(${SRC_ROOT}/common)
add_subdirectory(${SRC_ROOT}/net)
add_subdirectory(${SRC_ROOT}/codegen)
add_subdirectory(${SRC_ROOT}/rpc)
add_subdirectory(${SRC_ROOT}/server)
add_subdirectory(${SRC_ROOT}/utils)
add_subdirectory(${SRC_ROOT}/kv)
add_subdirectory(${SRC_ROOT}/wal)
add_subdirectory(${SRC_ROOT}/checkpoint)
add_subdirectory(${SRC_ROOT}/acc)
add_subdirectory(${SRC_ROOT}/3rd)
add_subdirectory(${SRC_ROOT}/client)